--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.1",
     "next": "latest",
+    "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
     "react": "latest",
     "react-countup": "^6.4.2",
