--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "lucide-react": "^0.286.0",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.1",
+    "multer": "^1.4.5-lts.1",
     "next": "latest",
+    "next-connect": "^1.0.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
     "react": "latest",
